--- a/templates/Payroll.html
+++ b/templates/Payroll.html
@@ -44,7 +44,7 @@
 		
 		<div class="button-container1">
 		
-				<button type="submit" value="submit">CALCULATE PAYROLL</button>
+				<button type="submit" value="submit" class="form-button2"> CALCULATE PAYROLL</button>
 			
 			</div>
 		</form>
