--- a/static/AddEmp.css
+++ b/static/AddEmp.css
@@ -168,7 +168,7 @@ input[type=number] {
 	justify-content: center;
 	align-self: center;
 	width: auto;
-	background-color: #F3E1FF;
+	background-color: #FFFFFF;
 	border-radius: 0 0 10px 10px;
 	padding: 10px;
 	margin: auto;
