--- a/static/AddEmp.css
+++ b/static/AddEmp.css
@@ -180,7 +180,7 @@ input[type=number] {
 	justify-content: center;
 	align-self: center;
 	width: auto;
-	background-color: #F3E1FF;
+	background-color: #FFFFFF;
 	border-radius: 0 0 10px 10px;
 	padding: 10px;
 	margin: auto;
@@ -193,7 +193,7 @@ input[type=number] {
 	justify-content: center;
 	align-self: center;
 	width: auto;
-	background-color: #F3E1FF;
+	background-color: #FFFFFF;
 	border-radius: 0 0 10px 10px;
 	padding: 10px;
 	margin: -10px 0 0 0;
