--- a/templates/PayrollOutput.html
+++ b/templates/PayrollOutput.html
@@ -37,19 +37,19 @@
 				</div>
 				<div class="form-bubble-container form-bubble-container-get">
 					<p>Working Hours</p>
-					<p>{{working_hours}}</p>
+					<p>{{WorkingHours}}</p>
 				</div>
 				<div class="form-bubble-container form-bubble-container-get">
 					<p>Monthly Salary</p>
-					<p>{{pay}}</p>
+					<p>{{MonthlySalary}}</p>
 				</div>
 				<div class="form-bubble-container form-bubble-container-get">
 					<p>Annual Salary</p>
-					<p>{{anual}}</p>
+					<p>{{AnnualSalary}}</p>
 				</div>
 				<div class="form-bubble-container form-bubble-container-get">
 					<p>Bonus</p>
-					<p>{{bonus}}</p>
+					<p>{{Bonus}}</p>
 				</div>
 			</div>
 			<div class="button-container">
