--- a/static/AddEmp.css
+++ b/static/AddEmp.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
 html {
-	background-color: white;
+	background-color: #b3d7ff; /* Baby blue background color */
 	font-family: 'Lato', sans-serif;
 }
 
