--- a/static/AddEmp.css
+++ b/static/AddEmp.css
@@ -98,7 +98,7 @@ input[type=number] {
 }
 
 .form-bubble {
-	background-color: #ffffff;
+	background-color: #eceff4;
 	border-radius: 15px;
 	padding: 15px;
 	display: flex;
