--- a/static/AddEmp.css
+++ b/static/AddEmp.css
@@ -10,7 +10,7 @@ body {
 	padding: 5px;
 	display: flex;
 	flex-direction: column;
-	background-image: url("img/Frog.jpg");
+	background-image: url("img/Frog.jpeg");
 }
 
 h1 {
