--- a/static/AddEmp.css
+++ b/static/AddEmp.css
@@ -10,7 +10,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	background-image: url("img/Frog.png");
-	background-size: auto;
+	background-size: cover;
 }
 
 h1 {
