--- a/static/AddEmp.css
+++ b/static/AddEmp.css
@@ -201,7 +201,7 @@ input[type=number] {
 	justify-content: center;
 	align-self: center;
 	width: auto;
-	background-color: #FFFFFF;
+	background-color: #eceff4;
 	border-radius: 0 0 10px 10px;
 	padding: 10px;
 	margin: -10px 0 0 0;
